# bevy_basic_player

./: .gitignore  Cargo.toml  README.md  index.html  rustfmt.toml
src/: main.rs  player.rs
