[package]
name = "bevy_player_move"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.11.3"
bevy_asset_loader = { version = "0.17.0", features = ["2d"] }
bevy_pixel_camera = "0.5.1"
